correcting contrast

--- a/style.css
+++ b/style.css
@@ -747,9 +747,7 @@ h3 {
     margin-top: 24px;
 }
 
-.white {
-    color: #FFFFFF!important;
-}
+
 
 .portfolio-thumb {
     margin-bottom: 24px;
